force-app/main/default/objects/DSALES_Partidadepago__c/DSALES_Partidadepago__c.object-meta.xml
<CustomObject>
    <label>Partida de pago</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Partida de pago Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partidas de pagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>