force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Cambio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Cambio__c</fullName>
    <label>Cambio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>