force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_CreditoIVA__c.field-meta.xml
<CustomField>
    <fullName>DSALES_CreditoIVA__c</fullName>
    <label>Crédito con IVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>