force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Ganodineroelec__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Ganodineroelec__c</fullName>
    <label>Ganó dinero electrónico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>