force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Informaciondepago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Informaciondepago__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Información de pago</label>
    <referenceTo>DSALES_InformacionDePago__c</referenceTo>
    <relationshipLabel>Partidas de pagos</relationshipLabel>
    <relationshipName>Partidas_de_pagos</relationshipName>
    <type>Lookup</type>
</CustomField>