force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Menospagoinicial__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Menospagoinicial__c</fullName>
    <label>Menos pago inicial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>