force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Pagoefectivo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Pagoefectivo__c</fullName>
    <label>Pago efectivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>