force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Productoadquirido__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Productoadquirido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relacionar el producto adquirido con el pago.</description>
    <label>Producto adquirido</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Partidas de pagos</relationshipLabel>
    <relationshipName>Partidas_de_pagos</relationshipName>
    <type>Lookup</type>
</CustomField>