force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Saldodineroelec__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Saldodineroelec__c</fullName>
    <label>Saldo dinero electrónico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>