force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_Tipodepago__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Tipodepago__c</fullName>
    <description>Campo para registrar que tipo de pago es.</description>
    <label>Tipo de pago</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crédito</fullName>
            </value>
            <value>
                <fullName>Débito</fullName>
            </value>
            <value>
                <fullName>Contado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>