force-app/main/default/objects/DSALES_Partidadepago__c/fields/DSALES_TotalContado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TotalContado__c</fullName>
    <label>Total de contado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>